feat: create route get CNPJ in integration with CNPJA
