# src/routes/store.routes.js
@@ -4,6 +4,7 @@ const StoreController = require('../controllers/StoreController')
 const router = Router()
 router
     .get("/api/stores", StoreController.getAll)
+    .get("/api/stores/cnpj/info", StoreController.getCNPJ)
     .get("/api/stores/:id", StoreController.getById)
     .put("/api/stores/:id", StoreController.update)
     .patch("/api/stores/:id", StoreController.changeStatus)
